bg photos for 2 sections

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
     <p>Don’t you,  <br/>your feet grounded in American soil, <br/>feel her  <br/>seeping between the fingers of the Father’s closed fists?  <br/>I wander, through magnolias and pines, seeking a seat at her table, <br/>ears straining, spirit thirsty</p>
     </div>
     </div>
-    
+
   </section>
 
   <section id="big-chop">
     <div id="big-chop-text">
     <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
-    
+
     <p>I had grown accustomed to<br/>people laughing<br/>at its dead ends <br/>and unwillingness to lie down</p>
 
     <p> No one told me <br/>that my hair was learning how to sing <br/>and that every time <br/>it faced the scalding relaxers <br/>and red-hot flat irons, <br/>I was erasing <br/>the tone of my hair’s voice <br/>its unrelenting texture <br/>its powerful volume</p>
@@ -202,13 +202,13 @@
       <div class="row">
 
         <div class="col-sm-6">
-          <img src="images/slow-brunch.png"></img>
+          <img src="images/slow-brunch.png">
         </div>
 
         <div class="col-sm-6">
           <div class="article">
             <h1>A Slow Brunch</h1>
-            <h2>By Katie Saviano</h2>
+            <h2>By Anonymous</h2>
             <br>
             <p>My grandmother forgot my name when I saw her over winter break.</p>
             <p>She has been forgetting for years, a process which has dulled her. At brunch, I ask her questions about her life that I know she will not be able to answer.</p>
@@ -277,41 +277,49 @@
         </div>
 
         <div class="col-sm-6 img">
-
           <img src="images/routine.png">
         </div>
 
-
+      </div>
+    </div>
   </section>
 
   <section id="keep-love">
 
-          <h1>You Can Keep Your <span class="red">Love</span></h1>
-          <h2>By Cayla Brown</h2>
+    <h1>You Can Keep Your <span class="red">Love</span></h1>
+    <h2>By Cayla Brown</h2>
 
-          <br>
+    <br>
 
-          <p>Does love trump hate?<br />Does love keep us safe?</p>
-          <p>Will Black boys hugging cops stop bullets<br />From piercing their backs?<br />Will my march keep the off-duty officer from drawing his gun on<br />A &ldquo;Trespasser?&rdquo;<br />Will my resistance exonerate the innocent,<br />convince the &ldquo;witness&rdquo; to recant her lie?<br />When will this &ldquo;love&rdquo; shine on melanin like the sun<br />Remind them that life is birthed from generous Black women.</p>
-          <p>Does love eat fear?<br />gobble up the anxiety that shoots through your muscles like lightning</p>
-          <p>when you are stopped by the police,<br />border control<br />any White person</p>
-          <p>seeking to enact their makeshift justice;<br />demanding English to be the only tongue you employ,<br />says the hijab is unsettling,<br />equates nationalism with destabilization of the other,<br />calls you out of your name<br />tells you you&rsquo;d be safer if you didn&rsquo;t resist<br />didn&rsquo;t burn shit<br />didn&rsquo;t make them notice the anger<br />tell me<br />when is the "love" supposed to kick in?</p>
-          <p>We have been waiting<br />in the street<br />online<br />on the phone<br />on standby<br />for this love to swoop in,</p>
-          <p>massage our feet<br />pour honey on the pain<br />call us sacred<br />thank the melanin<br />for our struggle<br />our service<br />our time<br />pluck out the thorns<br />soothe the memories with aloe</p>
-          <p>and reparations</p>
-          <p>Yet love stays absent<br />Does this kind of love exist?<br />Has it ever?</p>
-        </div>
+    <p>Does love trump hate?<br />Does love keep us safe?</p>
+    <p>Will Black boys hugging cops stop bullets<br />From piercing their backs?<br />Will my march keep the off-duty officer from drawing his gun on<br />A &ldquo;Trespasser?&rdquo;<br />Will my resistance exonerate the innocent,<br />convince the &ldquo;witness&rdquo; to recant her lie?<br />When will this &ldquo;love&rdquo; shine on melanin like the sun<br />Remind them that life is birthed from generous Black women.</p>
+    <p>Does love eat fear?<br />gobble up the anxiety that shoots through your muscles like lightning</p>
+    <p>when you are stopped by the police,<br />border control<br />any White person</p>
+    <p>seeking to enact their makeshift justice;<br />demanding English to be the only tongue you employ,<br />says the hijab is unsettling,<br />equates nationalism with destabilization of the other,<br />calls you out of your name<br />tells you you&rsquo;d be safer if you didn&rsquo;t resist<br />didn&rsquo;t burn shit<br />didn&rsquo;t make them notice the anger<br />tell me<br />when is the "love" supposed to kick in?</p>
+    <p>We have been waiting<br />in the street<br />online<br />on the phone<br />on standby<br />for this love to swoop in,</p>
+    <p>massage our feet<br />pour honey on the pain<br />call us sacred<br />thank the melanin<br />for our struggle<br />our service<br />our time<br />pluck out the thorns<br />soothe the memories with aloe</p>
+    <p>and reparations</p>
+    <p>Yet love stays absent<br />Does this kind of love exist?<br />Has it ever?</p>
 
-        <img src="images/flag.png">
+    <img src="images/flag.png">
 
   </section>
 
   <section id="colored-women">
+
     <h1>For Colored Women</h1>
     <h2>By Anonymous</h2>
+
+    <div class="clouds1">
+    </div>
+
     <p>I cannot escape my Blackness <br />I cannot escape the body that identifies (targets) me <br />I cannot escape the body that betrays me <br />I cannot escape <br />The color of my skin, <br />The size of my hips, <br /> The curl of my hair <br />Too much <br />Too big <br />Too hood <br />Too sexy (I am 10 and you smell stale, like cigarettes and sweat) <br />Too much of a tease (I am 17 and you reek of entitlement and your dirty uniform) <br />Yet somehow not enough, <br />I am not enough to be loved, <br />I am not a human, <br />I am a receptacle. <br />I am trapped in my body <br />Shattered <br />I am the damaged goods <br />That no amount of bubble wrap and cardboard box was ever strong enough to protect <br />I don&rsquo;t (can&rsquo;t) dream, I cry <br />I shove my face into my pillow and try to suffocate myself <br />I want the darkness to swallow me <br />I pray to God that I don&rsquo;t wake up <br />(can you hear me?) <br />I can not love <br />(have I ever been capable of love?) <br />(are objects worthy of love?)</p>
     <p>I meet you <br />now I am 19 and my skin smells like fear <br />your skin tastes sweet like rain and a little salty because of the tears <br /> (are they yours or mine?) <br />Together our bodies lay exhausted <br />But your eyes are so bright <br />We are a mess <br />A tangle of limbs <br />my fingers run through the waves of your hair <br />While you trace the curve of my arm <br /> I have never been touched so gently <br />This time I cry sweet tears while your sweeter name sits on my tongue <br />We are damp, sticky and almost the same shade of brown <br />I cannot tell where I end and you begin <br />I have never been more in lust <br />I have never been more in love</p>
     <p>For the colored women who hold a mind consuming love for other colored women <br /> For the colored woman who saved my life</p>
+
+    <div class="clouds2">
+    </div>
+
   </section>
 
   <section id="guide-parents">
