adding in first few pages

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
+  <img src="images/car-sig.png" alt="editor's signature" width= "300px" height= "auto" align="right">
   <p> Carissa Fleury </p>
 
   </section>
@@ -109,6 +110,68 @@
 <p>And still, I am here. I am human whether or not you believe it.</p>
 <img src="images/voices.jpg" alt="a photo of a woman in a dark room" width="100%" height: "auto" align="center">
   </section>
+
+<section id ="rain">
+  <h1> rain </h1>
+  <h2> Jaanvi Sant </h2>
+  <div id="p_text">
+    <p> a language </p>
+    <p> bloomed </p>
+    <br>
+    <p> beneath my tongue </p>
+    <p> long before i </p>
+    <br>
+    <p> learned </p>
+    <p> to speak </p>
+    <br>
+    <p> // </p>
+    <br>
+    <p> lotus-eyes: </p>
+    <p> i will meet you </p>
+    <br> 
+    <p> where the sky spills </p>
+  </div>
+  </section>
+
+  <section id="all_grown_up">
+
+  
+  <div class="row">
+    <div class="col-sm-7"></div>
+    <div class="col-sm-4">
+      <p> The heel of another afternoon melts into</p> 
+      <p> another dusk. </p>
+      <p> Dregs of a sunshine warming </p>
+      <p>from distant shore.</p>
+      <p>&nbsp;</p>
+
+      <p> Everything wanes, glows, erupts </p>
+      <p>catches in hands, in divets, in shallow valleys </p>
+
+      <p>changes in a breath, sighs.</p>
+      <p>&nbsp;</p>
+
+      <p>Bloodlines grip and swell,</p>
+      <p> siblings gather round, holding pinkies,</p>
+      <p> holding telephones across oceans.</p>
+      <p>&nbsp;</p>
+
+      <p> Froth and churn. </p>
+      <p> Hurling grit up to the surface </p>
+      <p>into the speckled day.</p>
+      <p> Silence is a specialty of those </p>
+      <p> with whom we first learned to speak. </p>
+  
+    </div>
+     <div class="col-sm-1"> </div>
+  </div>
+  
+  <h1> All Grown Up <br> But Still <br> Sifting <br>Through <br> Pebbles </h1>
+  <h2> By: Liza Leonard </h2>
+
+  </section>
+
+
 
   <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
 <section id="etsi">
