--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
     <p>Don’t you,  <br/>your feet grounded in American soil, <br/>feel her  <br/>seeping between the fingers of the Father’s closed fists?  <br/>I wander, through magnolias and pines, seeking a seat at her table, <br/>ears straining, spirit thirsty</p>
     </div>
     </div>
-    
+
   </section>
 
   <section id="big-chop">
     <div id="big-chop-text">
     <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
-    
+
     <p>I had grown accustomed to<br/>people laughing<br/>at its dead ends <br/>and unwillingness to lie down</p>
 
     <p> No one told me <br/>that my hair was learning how to sing <br/>and that every time <br/>it faced the scalding relaxers <br/>and red-hot flat irons, <br/>I was erasing <br/>the tone of my hair’s voice <br/>its unrelenting texture <br/>its powerful volume</p>
@@ -334,6 +334,27 @@
 
 
   <!-- SECTION FIVE START unmasked friend through a future maybe-->
+
+  <section id="unmasked-friend">
+    <h1>Unmasked Friend</h1>
+    <p>When I see the spaces<br />Between your masculinity,<br />I know you<br />Still<br />Have a chance<br />at being a person.</p>
+    <p><br />When you feel,<br />I see your person.<br />When you hurt,<br />I see your person.<br />When you cry,<br />I see your person.<br />They are beautiful.</p>
+    <p><br />And I have loved you despite knowing<br />That the pain of Our bodies<br />Is in your hands.<br />Despite knowing that it is<br />Because of masculinity<br />That I have hated myself.<br />And yet you cling on to it<br />Like a lifeline.</p>
+    <p><br />Why do you still persist<br />In a jailed life<br />With you and Him?<br />He is not your friend</p>
+
+    <p>Do barriers bring you joy?<br />Because I am weeping at<br />You<br />yelling at my humanity.<br />Trading it to your Friend.</p>
+    <p><br />He cuts me.</p>
+    <p><br />Do barriers bring you joy?<br />Because I am weeping<br />That I have lost you<br />to a monster that doesn&rsquo;t let you breathe.</p>
+    <p><br />Your barriers are so hard.<br />My tears cannot break them.</p>
+    <p><br />I am trying to tell you<br />That masculinity has ripped me apart,<br />As it has torn my people,<br />As it has hurt our voices,<br />As it has taken over our minds.</p>
+    <p><br />Our mistake was that we had no manhood<br />To mask us. Yours<br />was that you believed<br />That it could mask you.</p>
+
+    <h2>By Saba Kohli Dave</h2>
+  </section>
+  <section id="mother">
+  <section id ="dreams-allowed">
+  <section id="mother-glass">
+  <section id="a-future"
 
   <!-- put credits including art here -->
   <section id="parting">
