first part of section 5 draft

--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
     <br>
     <p> lotus-eyes: </p>
     <p> i will meet you </p>
-    <br> 
+    <br>
     <p> where the sky spills </p>
   </div>
   </section>
 
   <section id="all_grown_up">
 
-  
+
   <div class="row">
     <div class="col-sm-7"></div>
     <div class="col-sm-4">
-      <p> The heel of another afternoon melts into</p> 
+      <p> The heel of another afternoon melts into</p>
       <p> another dusk. </p>
       <p> Dregs of a sunshine warming </p>
       <p>from distant shore.</p>
@@ -161,11 +161,11 @@
       <p>into the speckled day.</p>
       <p> Silence is a specialty of those </p>
       <p> with whom we first learned to speak. </p>
-  
+
     </div>
      <div class="col-sm-1"> </div>
   </div>
-  
+
   <h1> All Grown Up <br> But Still <br> Sifting <br>Through <br> Pebbles </h1>
   <h2> By: Liza Leonard </h2>
 
@@ -422,8 +422,74 @@
 
     <h2>By Saba Kohli Dave</h2>
   </section>
+
   <section id="mother">
+  <h1>mother</h1>
+  <h2>by sarah chin</h2>
+  <p>what I can<br />glean<br />from her</p>
+  <p><br />body, is that<br />I must give thanks for<br />what I can.</p>
+  <p><br />I see<br />how it&rsquo;s all been taken<br />from her,</p>
+  <p><br />feel her fear<br />and do<br />what I can,</p>
+  <p><br />brush her hair<br />as she lounges in the tub, puckered<br />from her</p>
+  <p><br />bath salts; lend her my skirt<br />on the nights when<br />what I can</p>
+  <p><br />do is not enough and she is restless<br />and she wants to go out and escape<br />from her</p>
+  <p><br />rutted skin. she doesn&rsquo;t tell me that she is dying<br />in the way that all women are, that<br />what I can</p>
+  <p><br />do is irrelevant because there is nothing<br />any of us can do to make it stop because it comes<br />from her.</p>
+  <p><br />so the only thing left<br />is to do<br />what I can</p>
+  <p><br />and take<br />what I can<br />from her.</p>
+
+
+  </section>
+
   <section id ="dreams-allowed">
+    <h1>I'm allowed to have my dreams</h1>
+    <h2>By Nazifa Noor Sarawat</h2>
+    <div data-canvas-width="22.67489220563847">We talk about how I&rsquo;m doing and our eyes avoid each other&rsquo;s.</div>
+    <div data-canvas-width="214.26435820895517">I try to look at you more: your skin</div>
+    <div data-canvas-width="336.79050082918735">browned from years of baking under the American sun,</div>
+    <div data-canvas-width="319.79027529021556">valleys plowed into your forehead, grease etched into</div>
+    <div data-canvas-width="264.57557545605306">your knuckle creases. I&rsquo;m not sure what it is</div>
+    <div data-canvas-width="215.48279933665003">that keeps me from you but I flinch</div>
+    <div data-canvas-width="148.66319071310113">whenever you touch me.</div>
+    <div data-canvas-width="148.66319071310113">&nbsp;</div>
+    <div data-canvas-width="328.9152106135987">The tips of your fingers are wide and flat and calloused</div>
+    <div data-canvas-width="229.76084908789392">and carefully separate little white pills</div>
+    <div data-canvas-width="362.06423880597004">into plastic compartments marked for every day of the week.</div>
+    <div data-canvas-width="344.6776782752903">I take pills now too and when I hear their rattle I think of</div>
+    <div data-canvas-width="364.9023150912104">falling bottles and scattered dreams, stars against a night sky,</div>
+    <div data-canvas-width="296.37243117744606">small specks spilled against a dark kitchen carpet,</div>
+    <div data-canvas-width="267.57710116086236">and me, looking through the black expanses</div>
+    <div data-canvas-width="427.6208291873961">trying to find the pinpricks of white. They&rsquo;re harder to find in Brooklyn.</div>
+    <div data-canvas-width="427.6208291873961">&nbsp;</div>
+    <div data-canvas-width="317.6520597014925">We sit at the kitchen table and you separate your pills</div>
+    <div data-canvas-width="245.21424875621892">and Ammu empties pots into containers</div>
+    <div data-canvas-width="365.0063283582089">to store for tomorrow. You hear metal scraping against metal</div>
+    <div data-canvas-width="218.54376119402988">and tell me the story of your brother</div>
+    <div data-canvas-width="352.7327628524047">who heard the same sound every night as they scraped out</div>
+    <div data-canvas-width="255.9439601990049">the blackened bottoms of pots to feed him.</div>
+    <div data-canvas-width="270.71235820895527">Here at the table the light is warm and yellow</div>
+    <div data-canvas-width="168.81204643449416">but you are in another place</div>
+    <div data-canvas-width="241.84273300165833">where tomorrow&rsquo;s meal is not as certain.</div>
+    <div data-canvas-width="241.84273300165833">&nbsp;</div>
+    <div data-canvas-width="313.61188723051396">How many sounds take you back to stories of abuse?</div>
+    <div data-canvas-width="296.91032835820886">Abbu, you have a lot of stories. So now you laugh</div>
+    <div data-canvas-width="197.39934991708122">when you see death on the news.</div>
+    <div data-canvas-width="273.19530348258695">I don&rsquo;t know what your laughter does for you</div>
+    <div data-canvas-width="285.52681923714755">but my teeth are like yours, and my smile is too.</div>
+    <div data-canvas-width="429.71595356550574">I couldn&rsquo;t make you cry with me, so I stopped laughing with you instead</div>
+    <div data-canvas-width="414.8866334991707">and now we sit silent. Sometimes one of us laughs and one of us cries.</div>
+    <div data-canvas-width="414.8866334991707">&nbsp;</div>
+    <div data-canvas-width="180.23864676616913">In a dream I was afraid of you</div>
+    <div data-canvas-width="344.8723316749585">and I tried to escape the you that dream-you had become.</div>
+    <div data-canvas-width="400.5788656716418">When I woke up, I felt a cold pressing between my shoulder blades</div>
+    <div data-canvas-width="238.97493864013273">and I knew the fear had stayed with me.</div>
+    <div data-canvas-width="402.88201658374794">I&rsquo;m allowed to have dreams, you say, when one of us runs from you.</div>
+    <div data-canvas-width="240.3271111111111">On the phone your voice sounds folded.</div>
+    <div data-canvas-width="335.0371343283581">Your words slip off my skin like sweat and I have to ask,</div>
+    <div data-canvas-width="266.33042786069643">when the dreams are gone, what is left of us?</div>
+    <div data-canvas-width="179.21188723051407">What is left of your daughter?</div
+  </section>
+
   <section id="mother-glass">
   <section id="a-future"
 
