rest of section 5

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:800">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:800"> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:800">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -226,7 +226,7 @@
   </section>
 
   <section id="mira-que">
-    <div id="mira-que-title"> 
+    <div id="mira-que-title">
       <h1>Mira Que Te Quiso, Fue Por Tu Pelo</h1>
       <h2>Leticia Rocha</h2>
     </div>
@@ -269,17 +269,17 @@
         <p>when she was forced from that home <br>because of fear of strange fruit<br>&amp; trees &amp; picnic postcards, she<br> breathed a sigh into a bottle and<br> buried it in the hot tennessee soil</p>
         <p>my nana just gave her last sigh and <br>all I can think of is<br>charcoal women and how<br>she couldn’t remember me but <br>when she lay dying<br>my auntie told me across miles of land,<br>over crackling telephone lines and in cracking voices <br>that my nana’s eyelids fluttered when<br>she heard my voice</p>
         <p>when I was a Black baby <br>(born with dusty dark skin <br>that lightened over the<br>years and a full head of hair) <br>she pressed her grammy kisses <br>into my cheeks and called<br>me “little peach” for the first time</p>
-        <p>as I grew up, I got gangly,<br>then<br>melancholy and every summer I<br>ran around picking peaches off of her <br>trees as she played jazz on the radio and told me that<br>my laugh sounded like a<br>miracle, taught me to<br>love the color yellow and long for her <br>Black fingers oiling my scalp when<br>I left at the end of each summer</p> 
+        <p>as I grew up, I got gangly,<br>then<br>melancholy and every summer I<br>ran around picking peaches off of her <br>trees as she played jazz on the radio and told me that<br>my laugh sounded like a<br>miracle, taught me to<br>love the color yellow and long for her <br>Black fingers oiling my scalp when<br>I left at the end of each summer</p>
       </div>
       <div class="column">
-        <p>my nana was the first one<br>who showed me Billie Holiday<br>on her back porch with sticky<br>fingers from homemade<br>pies and as she lay dying, I sang<br>her Billie Holiday—<br>for years, I was dreading<br>this day becoming a marked-on-the-calendar day <br>this same day as her daughter’s birthday<br>she passed away and<br>my papa was an oak tree but<br>my nana was a warm breeze</p> 
+        <p>my nana was the first one<br>who showed me Billie Holiday<br>on her back porch with sticky<br>fingers from homemade<br>pies and as she lay dying, I sang<br>her Billie Holiday—<br>for years, I was dreading<br>this day becoming a marked-on-the-calendar day <br>this same day as her daughter’s birthday<br>she passed away and<br>my papa was an oak tree but<br>my nana was a warm breeze</p>
         <p>my nana taught me that this Black<br>body is holy, wholly<br>she taught me to love each inch of my skin, <br>to oil it up<br>because nobody else would love it like I did <br>to braid my hair each night with my fingers <br>(the same as hers)<br>to stand with a straight spine (when I could) <br>to speak in a red brick voice and<br>to never let no white men tell<br>me I wasn’t worth nothin’<br>because I was Mary’s grandbaby and ain’t <br>nobody gon’ tell me I’m not worthy</p>
         <p>papa went first and now my nana, <br>my two Black strongholds<br>&amp; now they’re ghosts<br>or maybe spirits<br>or maybe they’re nowhere<br>or maybe they’re everywhere<br>and maybe this<br>black queer body of mine will<br>always tingle when I eat peaches or hear Billie</p>
         <p>and when I braid my Black girl <br>students’ hair and<br>my fingers twist as<br>second nature, and they ask me <br>where I learned this, I will say <br>with a warm breeze smile<br>“my nana taught me.”</p>
       </div>
-    </div> 
+    </div>
   <img id="summer_img" src = "images/small_summer.png">
-</section> 
+</section>
 
 <section id="aishvarya">
   <div id="blank_space_1"></div>
@@ -289,7 +289,7 @@
     </div>
     <div class="column">
       <p>I’ve been gazing <i>hard</i> so my memory for it &emsp;&emsp;is better now than when I was a child, <br>
-      but still I blink &emsp;&emsp;and everyone seems to be better than me at remembering I’m not<br> 
+      but still I blink &emsp;&emsp;and everyone seems to be better than me at remembering I’m not<br>
       White. I thought I managed to &emsp;&emsp;Be <i>assimilated</i>&emsp;&emsp; which means: (of information) <br>
       to take in</p>
       <p>and understand fully; or (of an organism) absorb and digest. <i>The organism<br>
@@ -338,9 +338,9 @@
     <p>I hear the hurt everywhere <br>it opens the world to me.</p>
     <p>but sometimes I forget,<br>because the wind of the South China straits <br>unfolds hair from the back of my ears</p>
     <p>whispering a sweet sound</p>
-    <p>that tomorrow will come</p>  
+    <p>that tomorrow will come</p>
     </div>
-  </section> 
+  </section>
 <div id="blank_space"></div>
 
   <section id="tiara_anon">
@@ -356,7 +356,7 @@
       <div class="text" id="2">no one has seen my body but me since i was very young. and it doesn’t feel right. i love it, but it doesn’t feel right. i love it, but there are things i want to change. i love it, but it took me a long time to love it and every day i worry that no one else has the time, or the patience. i  nally believe i am beautiful.</div>
       <div class="text" id="2">only some days is that enough.</div>
     </div>
-  
+
     <div id="tiara">
       <div class= "title">
         <h1>Limbo</h1>
@@ -371,7 +371,7 @@
   </section>
 
   <!-- SECTION FOUR START A slow brunch through a guide to helping depressed parents-->
- 
+
   <section id="slow-brunch">
    <div class="container">
       <div class="row">
@@ -603,7 +603,31 @@
   </section>
 
   <section id="mother-glass">
-  <section id="a-future"
+    <h1>Mother's Glass</h1>
+    <div data-canvas-width="22.67489220563847">Sweat on bodies on sheets in a house<br />your mother worked so hard to build.<br />Those plants in the living room are<br />the manifestations of you. Your mother loves you<br />and you are lucky.<br />You are so goddamn lucky.</div>
+    <div data-canvas-width="22.67489220563847"><br />Your mother loves you even though<br />you&rsquo;re sweet talking a trite young girl<br />into falling out of her sundress<br />beneath the roof your mother pays for by working six to six<br />in that crowded downtown city you hate so much.</div>
+    <div data-canvas-width="22.67489220563847"><br />Your mother loves you and you don&rsquo;t know<br />that the girl underneath your kelly green covers<br />is not naked because you threw her underwear across the room,<br />but because she hasn&rsquo;t tasted her mother&rsquo;s love<br />since the day cancer chose to curl around her chest.</div>
+    <div data-canvas-width="22.67489220563847"><br />She is naked and afraid,<br />Do you see it? Do you see her shivering?<br />Those easy eyes and promiscuous palms have been burned<br />more times than the wood in your fireplace;<br />she is cold because her heart is perspiring out of her pores<br />and freezing upon contact with your breathy exhales.</div>
+    <div data-canvas-width="255.9439601990049">&nbsp;</div>
+
+    <h2>By Asia Acevedo</h2>
+    <p>You cannot melt her.</p>
+    <p>While you cradled her like a broken arm to your chest,<br />she said this was wrong but you retaliated that you don&rsquo;t even believe in god,<br />you don&rsquo;t believe in him, you said as you latched your lips to hers<br />and stole the breath she&rsquo;d been saving in a mason jar at the pit of her stomach<br />for the day she thought she&rsquo;d drown.</p>
+    <p>But you don&rsquo;t realize that she is cold<br />and she is dark and she is hardened because<br />your mother loves you and hers cannot.<br />Your mother loves you and here you are reopening the scars<br />she painted on her body years ago when you first said she wasn&rsquo;t worth it.<br />But now she is worth it,<br />because she is naked and she is an open invitation.<br />But don&rsquo;t forget,<br />your mother too was once sweet talked into severing the dress from her skeleton<br />by a boy she thought could thaw that glacier within;<br />she realized too late that mingling bodies didn&rsquo;t melt the ice, only solidified it.<br />And despite being naked and cold and starving for two,<br />she birthed you from the arctic,<br />and loved you anyway</p>
+  </section>
+
+  <section id="a-future" >
+  <h1>a future, maybe</h1>
+  <h2>by gabby bonifiglio</h2>
+  <p>1. when someone asks who lives in your heart, you picture me in morning light, my hair (it is constantly growing in) splayed across the pillow. our bed is white, and fluffier than our paychecks allow. the light makes my hair gold among the brown, and you notice.</p>
+  <p>2. waffles are a routine. you take yours with powdered sugar and sometimes lemon juice, mine always with syrup. i rise to make them&mdash;you see that sometimes they are the only idea that gets me out of bed, and you turn over with a moan and it is their smell that pulls you out of your nighttime. you bought me a tray for them, for my birthday, and this is one of the few presents i can remember that have made me cry.</p>
+  <p>3. we share everything, of course.</p>
+  <p>4. in the summertime, we make tomato pies and tarts and bloody marys, and we care for the plants in the back gingerly, but we don&rsquo;t wash them as well, and so our friends get used to dirt in their drinks.</p>
+  <p>5. some evenings, you burst through the door waving a book like its a flyswatter. &ldquo;i found one&rdquo; you repeat over and over. and then we race to the bed&mdash;you see that sometimes these are the only words that make me move quickly. we plop down and as we are, you open to a page in the middle of the book and begin reading, dramatically&mdash;i sometimes wonder if this is the only way you can. and after a few pages, one of us is in fits of tears or laughter (who can tell the difference) and i confirm &ldquo;you found one&rdquo; and we put the book on the shelf that takes up more space than we do.</p>
+  <div id = bed >
+  <img src="images/bed.jpg" >
+</div>
+  </section>
 
   <!-- put credits including art here -->
   <section id="parting">
